// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`PrimaryKey Decorator should add metadata 1`] = `
{
  "columns": [
    {
      "decorator": "Column",
      "enum": null,
      "fallback": null,
      "key": "givenName",
      "max": null,
      "min": null,
      "nullable": false,
      "optional": false,
      "readonly": false,
      "schema": null,
      "type": null,
    },
    {
      "decorator": "Column",
      "enum": null,
      "fallback": null,
      "key": "familyName",
      "max": null,
      "min": null,
      "nullable": false,
      "optional": false,
      "readonly": false,
      "schema": null,
      "type": null,
    },
  ],
  "entity": {
    "cache": null,
    "database": null,
    "decorator": "Entity",
    "name": "PrimaryKeyDecoratorEntity",
    "namespace": null,
  },
  "extras": [],
  "generated": [],
  "hooks": [],
  "indexes": [],
  "primaryKeys": [
    "givenName",
    "familyName",
  ],
  "primarySource": null,
  "relations": [],
  "schemas": [],
  "target": [Function],
}
`;

exports[`PrimaryKey Decorator should add metadata with string 1`] = `
{
  "columns": [
    {
      "decorator": "Column",
      "enum": null,
      "fallback": null,
      "key": "id",
      "max": null,
      "min": null,
      "nullable": false,
      "optional": false,
      "readonly": false,
      "schema": null,
      "type": null,
    },
  ],
  "entity": {
    "cache": null,
    "database": null,
    "decorator": "Entity",
    "name": "PrimaryKeyDecoratorPropertyEntity",
    "namespace": null,
  },
  "extras": [],
  "generated": [],
  "hooks": [],
  "indexes": [],
  "primaryKeys": [
    "id",
  ],
  "primarySource": null,
  "relations": [],
  "schemas": [],
  "target": [Function],
}
`;
